--- a/src/app/feature/historial/pages/historial/historial.component.html
+++ b/src/app/feature/historial/pages/historial/historial.component.html
@@ -10,7 +10,7 @@
   </mat-progress-spinner>
   </div>
 
-  <!-- Mostrar un mensaje de error si ocurre algún problema -->
+  <!-- Mostrar un mensaje de error si ocurre algún problema-->
   <div *ngIf="!isLoading && errorMessage" class="error-message">
     <p>{{ errorMessage }}</p>
 
@@ -21,14 +21,30 @@
     </svg>
   </div>
 
-  <!-- Mostrar la lista de rutas -->
+  <!-- Mostrar la lista de rutas-->
   <ul *ngIf="!isLoading && !errorMessage && routeHistory.length > 0" class="history-list">
     <li *ngFor="let route of routeHistory" class="history-item">
       <div class="route-info">
-        <p><strong>Origin:</strong> {{ route.origin_location }}</p>
-        <p><strong>Destination:</strong> {{ route.destination_location }}</p>
-        <p><strong>Security Level:</strong> {{ route.security_level | number: '1.0-2' }}</p>
-        <p><strong>Date:</strong> {{ route.created_at | date: 'short' }}</p>
+        <div class="route-info-time">
+          <p>{{ route.created_at | date: 'short' }}</p>
+        </div>
+        <div class="route-info-header">
+          <p>Security Level: {{ route.security_level | percent:'0.0-0' }}</p>
+        </div>
+        <div class="route-info-direction">
+          <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="10" fill="#0A8DC4" height="30" viewBox="0 0 718 1280">
+            <path d="M337 .6c-1.9.2-8.7.9-15 1.5C216.9 12 118.9 71.5 59.3 161.5 13.4 230.8-8.1 319.9 3 394.5 21 514.9 112.4 754.8 267.3 1088c33 71 90.6 191 91.7 191 1.1 0 58.7-120 91.7-191 131.8-283.5 220-505.4 252.3-635 15.5-62.1 18.2-97.8 11-147-12.2-83.4-54.6-161.1-118.5-216.9-55.4-48.4-121.1-77.6-195-86.7C388.3.9 344.9-.3 337 .6zm56 202.7c63.1 15 108 60.5 122.2 123.9 2 9 2.3 13 2.3 31.3 0 16.4-.4 23-1.8 30-13.2 64.7-61.5 113.2-126.5 126.7-15.5 3.2-44.9 3.2-60.4 0-65-13.5-113.3-62-126.5-126.7-2.8-13.8-2.5-47.3.5-61.1 3-13.9 6.4-23.9 12.7-37.1 21.4-45 62.3-77.1 111.1-87.2 14.3-3 14.1-3 35.9-2.6 17.1.3 21.5.7 30.5 2.8z"/>
+          </svg>
+          <p>{{ route.origin_location }}</p>
+        </div>
+        <img [src]="'puntos.png'" height="24px" width="24px">
+        <div class="route-info-direction">
+          <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="10" fill="#d9534f" height="30" viewBox="0 0 718 1280">
+            <path d="M337 .6c-1.9.2-8.7.9-15 1.5C216.9 12 118.9 71.5 59.3 161.5 13.4 230.8-8.1 319.9 3 394.5 21 514.9 112.4 754.8 267.3 1088c33 71 90.6 191 91.7 191 1.1 0 58.7-120 91.7-191 131.8-283.5 220-505.4 252.3-635 15.5-62.1 18.2-97.8 11-147-12.2-83.4-54.6-161.1-118.5-216.9-55.4-48.4-121.1-77.6-195-86.7C388.3.9 344.9-.3 337 .6zm56 202.7c63.1 15 108 60.5 122.2 123.9 2 9 2.3 13 2.3 31.3 0 16.4-.4 23-1.8 30-13.2 64.7-61.5 113.2-126.5 126.7-15.5 3.2-44.9 3.2-60.4 0-65-13.5-113.3-62-126.5-126.7-2.8-13.8-2.5-47.3.5-61.1 3-13.9 6.4-23.9 12.7-37.1 21.4-45 62.3-77.1 111.1-87.2 14.3-3 14.1-3 35.9-2.6 17.1.3 21.5.7 30.5 2.8z"/>
+          </svg>
+          <p>{{ route.destination_location }}</p>
+        </div>
+        <button>Explore route</button>
       </div>
       <div class="route-image">
         <img [src]="route.map_image_url" alt="Mapa estático de la ruta" />
