--- a/src/app/feature/historial/pages/historial/historial.component.scss
+++ b/src/app/feature/historial/pages/historial/historial.component.scss
@@ -56,27 +56,68 @@
     .history-item {
       display: flex;
       justify-content: space-between;
-      align-items: center;
       padding: 10px;
       margin-bottom: 10px;
+      align-items: center;
       border: 1px solid #ddd;
       border-radius: 8px;
       background-color: #f9f9f9;
+      flex-wrap: wrap;
 
       .route-info {
-        flex: 1;
+        display: flex;
+        flex-direction: column;
         margin-right: 10px;
+        min-width: 0;
+        flex: 1;
 
         p {
           margin: 5px 0;
+          color: #5d6063;
+          font-weight: 300;
+          white-space: nowrap;         /* Evita saltos de línea */
+          overflow: hidden;            /* Oculta el contenido que excede */
+          text-overflow: ellipsis;     /* Muestra "..." al final del texto */
+        }
+        &-header{
+          font-size: 13px;
+        }
+        &-time{
+          font-size: 10px;
+        }
+        &-direction{
+          display: flex;
+          column-gap: 8px;
+          align-items: center;
+        }
+        img{
+          margin-left: -7px;
+        }
+        svg{
+          width: 10px; /* Tamaño fijo */
+          height: 30px; /* Tamaño fijo */
+          flex-shrink: 0; /* Evita que Flexbox los reduzca */
         }
       }
 
       .route-image {
+        flex-shrink: 0; /* Evita que la imagen se reduzca demasiado */
+        max-width: 250px; /* Limita el ancho máximo de la imagen */
+        width: 100%; /* Ajusta dinámicamente */
         img {
-          max-width: 150px;
-          max-height: 100px;
+          width: 100%; /* Asegura que la imagen se ajuste al contenedor */
           border-radius: 4px;
+          object-fit: cover; /* Ajusta la imagen sin distorsión */
+        }
+      }
+      button{
+        cursor: pointer;
+        padding: 7px 4px;
+        background-color: #eaecf1;
+        border: none;
+        border-radius: 4px;
+        &:hover{
+          background-color: aliceblue;
         }
       }
     }
