--- a/src/app/feature/home/components/search-container/search-container.component.html
+++ b/src/app/feature/home/components/search-container/search-container.component.html
@@ -4,24 +4,25 @@
     <li *ngFor="let history of searchHistory">
       <div class="history-container">
         <div class="search-history_section">
-          <div class="headertext">
-            <span>Origen</span>
-          </div>
+          <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="10" fill="#0A8DC4" height="30" viewBox="0 0 718 1280">
+            <path d="M337 .6c-1.9.2-8.7.9-15 1.5C216.9 12 118.9 71.5 59.3 161.5 13.4 230.8-8.1 319.9 3 394.5 21 514.9 112.4 754.8 267.3 1088c33 71 90.6 191 91.7 191 1.1 0 58.7-120 91.7-191 131.8-283.5 220-505.4 252.3-635 15.5-62.1 18.2-97.8 11-147-12.2-83.4-54.6-161.1-118.5-216.9-55.4-48.4-121.1-77.6-195-86.7C388.3.9 344.9-.3 337 .6zm56 202.7c63.1 15 108 60.5 122.2 123.9 2 9 2.3 13 2.3 31.3 0 16.4-.4 23-1.8 30-13.2 64.7-61.5 113.2-126.5 126.7-15.5 3.2-44.9 3.2-60.4 0-65-13.5-113.3-62-126.5-126.7-2.8-13.8-2.5-47.3.5-61.1 3-13.9 6.4-23.9 12.7-37.1 21.4-45 62.3-77.1 111.1-87.2 14.3-3 14.1-3 35.9-2.6 17.1.3 21.5.7 30.5 2.8z"/>
+          </svg>
           <div class="route">
-            <span>{{ history.origin }}</span>
+            <p [title]="history.origin">{{ history.origin }}</p>
+          </div>
+        </div>
+        <img [src]="'puntos.png'" height="24px" width="24px">
+        <div class="search-history_section">
+          <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="10" fill="#d9534f" height="30" viewBox="0 0 718 1280">
+            <path d="M337 .6c-1.9.2-8.7.9-15 1.5C216.9 12 118.9 71.5 59.3 161.5 13.4 230.8-8.1 319.9 3 394.5 21 514.9 112.4 754.8 267.3 1088c33 71 90.6 191 91.7 191 1.1 0 58.7-120 91.7-191 131.8-283.5 220-505.4 252.3-635 15.5-62.1 18.2-97.8 11-147-12.2-83.4-54.6-161.1-118.5-216.9-55.4-48.4-121.1-77.6-195-86.7C388.3.9 344.9-.3 337 .6zm56 202.7c63.1 15 108 60.5 122.2 123.9 2 9 2.3 13 2.3 31.3 0 16.4-.4 23-1.8 30-13.2 64.7-61.5 113.2-126.5 126.7-15.5 3.2-44.9 3.2-60.4 0-65-13.5-113.3-62-126.5-126.7-2.8-13.8-2.5-47.3.5-61.1 3-13.9 6.4-23.9 12.7-37.1 21.4-45 62.3-77.1 111.1-87.2 14.3-3 14.1-3 35.9-2.6 17.1.3 21.5.7 30.5 2.8z"/>
+          </svg>
+          <div class="route">
+            <p [title]="history.destination">{{ history.destination }}</p>
           </div>
         </div>
         <div class="search-history_section">
           <div class="headertext">
-            <span>Destino</span>
-          </div>
-          <div class="route">
-            <span>{{ history.destination }}</span>
-          </div>
-        </div>
-        <div class="search-history_section">
-          <div class="headertext">
-            <span>Safety</span>
+            <span>Safety Level:</span>
           </div>
           <div class="route">
             <span>{{ history.safe | percent:'0.0-0' }}</span>
@@ -29,7 +30,7 @@
         </div>
         <div class="search-history_section">
           <div class="headertext">
-            <span>Tiempo</span>
+            <span>Travel Time:</span>
           </div>
           <div class="route">
             <span>{{ history.duration }}</span>
